syntax = "proto3";

package mods;

// Represents a single file entry in the mod, with a file path.
message FileElement {
  // The file path as specified in the XML attribute.
  string file = 1;
}

// A group of files under a specific tag (e.g., "Content", "Sounds", etc.)
message FileGroup {
  repeated FileElement files = 1;
}

// Represents a Barotrauma mod parsed from its content package XML file.
message BarotraumaMod {
  // The name of the mod.
  string name = 1;

  // The version of the mod.
  string modVersion = 2;

  // Whether this is a core package.
  bool corePackage = 3;

  // The Steam Workshop ID of the mod.
  string steamWorkshopId = 4;

  // The game version this mod is compatible with.
  string gameVersion = 5;

  // The expected hash of the mod.
  string expectedHash = 6;

  // All file entries grouped by their tag names (e.g., "Entity", "Sound", etc.)
  map<string, FileGroup> fileGroups = 7;

  // The home directory of the mod.
  optional string homeDir = 8;
}

// ModList represents a saved mod profile with ordered local mods.
message ModList {
  // The name of the mod profile.
  string profileName = 1;

  // The first non-Local tag name, such as "Vanilla"
  string basePackage = 2;

  // All Local mod names in order of appearance
  repeated string mods = 3;
}